--- a/server/package.yaml
+++ b/server/package.yaml
@@ -21,12 +21,14 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- postgresql-simple
+- time
 
 library:
   source-dirs: src
 
 executables:
-  fitness-tracker-exe:
+  fitness-tracker:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
