--- a/server/package.yaml
+++ b/server/package.yaml
@@ -20,16 +20,15 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/fitness-tracker#readme>
 
 dependencies:
-- aeson
+- aeson >= 1.5.6.0
 - base >= 4.7 && < 5
-- postgresql-simple
-- servant
-- servant-server
-- sqlite-simple
+- servant >= 0.18.3
+- servant-server >= 0.18.3
+- sqlite-simple >= 0.4.18.0
 - text
 - time
-- wai
-- warp
+- wai >= 3.2.3
+- warp >= 3.3.17
 
 library:
   source-dirs: src
