--- a/server/fitness-tracker.cabal
+++ b/server/fitness-tracker.cabal
@@ -34,59 +34,44 @@ library
       Queries.Sqlite
       Workout
       WorkoutSet
-  other-modules:
-      Paths_fitness_tracker
   hs-source-dirs:
       src
   build-depends:
-      aeson >=1.5.6.0
-    , base >=4.7 && <5
-    , servant >=0.18.3
-    , servant-server >=0.18.3
-    , sqlite-simple >=0.4.18.0
+      aeson
+    , base ==4.14.3.0
+    , servant
+    , servant-server
+    , sqlite-simple
+    , time
     , text
     , time
-    , wai >=3.2.3
-    , warp >=3.3.17
+    , wai
+    , warp
   default-language: Haskell2010
 
 executable fitness-tracker
   main-is: Main.hs
-  other-modules:
-      Paths_fitness_tracker
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson >=1.5.6.0
-    , base >=4.7 && <5
+      aeson
+    , base
     , fitness-tracker
-    , servant >=0.18.3
-    , servant-server >=0.18.3
-    , sqlite-simple >=0.4.18.0
+    , servant
+    , servant-server
+    , sqlite-simple
     , text
     , time
-    , wai >=3.2.3
-    , warp >=3.3.17
+    , wai
+    , warp
   default-language: Haskell2010
 
 test-suite fitness-tracker-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
-  other-modules:
-      Paths_fitness_tracker
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson >=1.5.6.0
-    , base >=4.7 && <5
-    , fitness-tracker
-    , servant >=0.18.3
-    , servant-server >=0.18.3
-    , sqlite-simple >=0.4.18.0
-    , text
-    , time
-    , wai >=3.2.3
-    , warp >=3.3.17
   default-language: Haskell2010
