--- a/server/fitness-tracker.cabal
+++ b/server/fitness-tracker.cabal
@@ -1,4 +1,4 @@
-cabal-version: 1.12
+cabal-version: 1.12 
 
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
@@ -34,7 +34,7 @@ library
       src
   build-depends:
       aeson
-    , base ==4.14.3.0
+    , base ==4.16.4.0
     , servant
     , servant-server
     , sqlite-simple
@@ -70,4 +70,5 @@ test-suite fitness-tracker-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
+    base
   default-language: Haskell2010
